[gd_scene load_steps=8 format=3 uid="uid://dqeuhtnjpvwks"]

[ext_resource type="Script" uid="uid://cowpff8rdcfmw" path="res://enemies/mobs/bat/bat.gd" id="1_858wr"]
[ext_resource type="Texture2D" uid="uid://cyurmckaaalw7" path="res://enemies/mobs/slime/sprites/slimeplaceholder.png" id="1_ex3qf"]
[ext_resource type="Script" uid="uid://1cehyj7s0b3a" path="res://hit_box.gd" id="3_cdqdh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_v7ima"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ex3qf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_858wr"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8drqv"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63lwy"]
size = Vector2(20, 30)

[node name="bat" type="CharacterBody2D"]
script = ExtResource("1_858wr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_v7ima")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_858wr")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource("3_cdqdh")
metadata/_custom_type_script = "uid://1cehyj7s0b3a"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
z_as_relative = false
shape = SubResource("RectangleShape2D_8drqv")

[node name="LeftRayCast" type="RayCast2D" parent="."]
position = Vector2(-12, 8)
target_position = Vector2(0, 30)

[node name="RightRayCast" type="RayCast2D" parent="."]
position = Vector2(12, 8)
target_position = Vector2(0, 30)

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
position = Vector2(-64, -7)
shape = SubResource("RectangleShape2D_63lwy")
target_position = Vector2(128, 0)
collision_mask = 2

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 5.0
